OO-4417: Configuration for write and moderate rights in feed course elements